2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Pass program name string to kpse_set_program_name.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c [MINGW32]: Drop superfluous dostounix_filename().
	Call texlive_gs_init() for MINGW32, as for native WIN32.

2010-09-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (DISTCLEANFILES): Use += instead of = to add
	more files.

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Use kpse_set_program_name() instead of
	kpse_set_progname().

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c [WIN32]: Patches for MinGW32 build
	from Akira Kakuto, 26 Feb 2010 11:00:34.
	Avoid compiler warnings.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: Add '#if defined(KPSE_DEBUG)' to allow compilation
	with '-DNO_DEBUG'.

2009-11-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac, gsftopk.c: Require recent kpathsea version.

2009-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Check for <kpathsea/version.h> and ...
	* gsftopk.c: ... skip extern decl if found.

2009-07-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c (pk_rll_cvt): cast ptr diff to long for printing.
	NB: sizeof(ptr)==sizeof(long) for both 32Bit and 64Bit systems.

2009-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS): enable compiler warnings.
	* gsftopk.c: use ANSI C function declarations and prototypes.
	(exit_toto_too, oops, opt_oops, get_one_arg, fgets_long,
	getdefaults, scan_map_file, addtodls, getlong, expect,
	whitespace, getint): declare as static.
	(main): explicit braces to avoid ambiguous `else'.

	* gsftopk.c (ISSET): add parens to definition (for polling).

2009-06-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* gsftopk.c: remove obsolete 'NORETURN void' -> 'volatile void'